tests/cases/conformance/types/primitives/string/stringPropertyAccessWithError.ts
// @target: es2015
var x = '';
var d = x['charAt']('invalid'); // error